--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "postcss": "^8.4.28",
     "prettier": "^3.0.2",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
 }
