--- a/data/projects.json
+++ b/data/projects.json
@@ -1,5 +1,16 @@
 [
   {
+    "title": "Yeji.dev",
+    "subTitle": "프로젝트를 기록하는 개인 블로그",
+    "description": "Next.js, tailwindcss, typescript를 이용해 만든 블로그입니다. 블로그 특성상 정적인 부분이 많고, 서버 사이드에서 마크다운 파일을 읽어 보여주는 작업을 할 수 있어 Next.js를 사용해 구현 했습니다.",
+    "date": "2023.08",
+    "tags": ["Next.js", "tailwindcss", "typescript"],
+    "path": "portfolio",
+    "sourceCodeUrl": "https://github.com/lerrybe/yeji.dev",
+    "liveUrl": "",
+    "videoUrl": ""
+  },
+  {
     "title": "react-draggable-selector",
     "subTitle": "A library for select times with drag in React",
     "description": "React-Draggable-Selector는 사용자가 드래그하여 시간 범위를 쉽게 선택할 수 있는 커스터마이즈 가능한 컴포넌트 라이브러리입니다. 직관적인 드래그 선택 기능과 자유롭게 스타일링을 바꿀 수 있는 장점이 있습니다.",
@@ -11,47 +22,14 @@
     "videoUrl": ""
   },
   {
-    "title": "collab-dotting",
-    "subTitle": "Editor that enables collaborative creation of pixel art using dotting.",
-    "description": "동시편집이 가능한 픽셀아트 에디터이고, 동시편집 라이브러리 Yorkie, 픽셀아트 라이브러리 Dotting의 예제로 contribution 된 프로젝트입니다.",
-    "date": "2023.08",
-    "tags": ["Yorkie", "Dotting", "React", "TypeScript"],
-    "path": "collab-dotting",
-    "sourceCodeUrl": "https://github.com/lerrybe/collab-dotting",
-    "liveUrl": "",
-    "videoUrl": ""
-  },
-  {
-    "title": "portfolio",
-    "subTitle": "대충 그럴싸한 소제목입니다. 대충 그럴싸한 소제목입니다.",
-    "description": "대충 그럴싸한 설명입니다. 대충 그럴싸한 설명입니다. 대충 그럴싸한 설명입니다.",
-    "date": "2023.08",
-    "tags": ["Next.js", "tailwindcss", "typescript"],
-    "path": "portfolio",
-    "sourceCodeUrl": "",
-    "liveUrl": "",
-    "videoUrl": ""
-  },
-  {
     "title": "waffle-market",
-    "subTitle": "대충 그럴싸한 소제목입니다.",
-    "description": "대충 그럴싸한 설명입니다. 대충 그럴싸한 설명입니다. 대충 그럴싸한 설명입니다.",
+    "subTitle": "당근마켓 클론코딩 프로젝트",
+    "description": "단순 게시판 기능 외에 예약, 거래, 채팅 등의 부가 기능이 더해진 서비스를 구현해보면서 구성원들의 개발 실력 성장을 이루고자 했고, 서비스 기획에 인풋을 줄이기 위해 기존에 있는 서비스를 기반으로 클론 코딩을 하였습니다.",
     "date": "2023.01 ~ 2023.02",
     "tags": ["React", "TypeScript", "Redux-toolkit", "AWS-S3"],
     "path": "waffle-market",
-    "sourceCodeUrl": "",
+    "sourceCodeUrl": "https://github.com/lerrybe/waffle-market",
     "liveUrl": "",
-    "videoUrl": ""
-  },
-  {
-    "title": "meetable",
-    "subTitle": "대충 그럴싸한 소제목입니다. 대충 그럴싸한 소제목입니다.",
-    "description": "대충 그럴싸한 설명입니다. 대충 그럴싸한 설명입니다. 대충 그럴싸한 설명입니다.",
-    "date": "2023.07 ~",
-    "tags": ["React", "TypeScript", "context-API"],
-    "path": "meetable",
-    "sourceCodeUrl": "",
-    "liveUrl": "",
-    "videoUrl": ""
+    "videoUrl": "https://www.youtube.com/watch?v=MHO3Fofvu3A"
   }
 ]
