curr: contribution current

--- a/data/projects.json
+++ b/data/projects.json
@@ -35,7 +35,7 @@
     ],
     "path": "collab-dotting",
     "sourceCodeUrl": "https://github.com/lerrybe/collab-dotting",
-    "liveUrl": "",
+    "liveUrl": "https://lerrybe.github.io/collab-dotting",
     "videoUrl": ""
   },
   {
